src/test/scala/wacc/ext_func_overload/funcCallParamNull1.wacc
# Semantic error: Function call arguments cannot contain null

# #semantic_error#

# Exit:
# 200

# Program:
begin
  pair(int, pair(char, bool)) f (pair(int, pair(char, bool)) x) is
    return x
  end
  pair(int, int) d = call f(null)
end